[tool.poetry]
name = "rl_games"
version = "1.6.1"
description = ""
readme = "README.md"
authors = [
    "Denys Makoviichuk <trrrrr97@gmail.com>",
    "Viktor Makoviichuk <victor.makoviychuk@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
gym = {version = "^0.23.0", extras = ["classic_control"]}
tensorboard = "^2.8.0"
tensorboardX = "^2.5"
PyYAML = "^6.0"
psutil = "^5.9.0"
setproctitle = "^1.2.2"
ray = "^1.11.0"
opencv-python = "^4.5.5"
wandb = "^0.12.11"

ale-py = {version = "^0.7", optional = true}
AutoROM = {version = "^0.4.2", optional = true, extras = ["accept-rom-license"]}
brax = {version = "^0.0.13", optional = true}
jax = {version = "^0.3.13", optional = true}
mujoco-py = {version = "^2.1.2", optional = true}
envpool = {version = "^0.6.1", optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
atari = ["ale-py", "AutoROM"]
brax = ["brax", "jax"]
mujoco = ["mujoco-py"]
envpool = ["envpool"]
